--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,9 @@
         <li id="ava">向晚</li>
         <li id="eileen">乃琳</li>
         <li id="bella">贝拉</li>
+        <li id="carol">珈乐</li>
     </div>
+    <div class="nav-bottom"></div>
 </body>
 
 </html>
